--- a/Meine-Website.html
+++ b/Meine-Website.html
@@ -12,7 +12,7 @@
     <h2><br />Ich bin 16 Jahre alt</h2>
 </div>
 
-<h2> Ich wohne in <a href="https://www.google.de/maps/place/Bonn/@50.7034931,6.9772171,11z/data=!3m1!4b1!4m5!3m4!1s0x47bee19f7ccbda49:0x86dbf8c6685c9617!8m2!3d50.73743!4d7.0982068">Bonn</a></h2>
+<h2 class="font-family"> Ich wohne in <a href="https://www.google.de/maps/place/Bonn/@50.7034931,6.9772171,11z/data=!3m1!4b1!4m5!3m4!1s0x47bee19f7ccbda49:0x86dbf8c6685c9617!8m2!3d50.73743!4d7.0982068">Bonn</a></h2>
     <h2> Meine Hobbys:</h2>
 <h3>
 <ul>
@@ -24,5 +24,8 @@
 <p class="font-family"><br />Wenn sie Bilder von mir sehen wollen dann gehen sie auf meine <a href="https://www.instagram.com/_.insta.vince._/?hl=de">Instagram Seite.</a> </p>
 <h1>Besuchen sie doch mal die Seite <a href="https://www.chefkoch.de/">Chefkoch.de.</a><br />Dort mache ich grade mein Praktikum!<h1>
     <h2>Dort finden sie viele tolle rezepte!<h2>
+        <h2><u>Rückblick:</u></h2>
+        <p>In den ersten zwei Tagen lernte ich ,über die Seite Codecademy, wie ich HTML,CSS und GitHub bedienen kann.</p>
+        <h2><u>Ausblick:</u></h2><p>Ich werde mit GitHub pages meinen Blog gestalten und weitere Änderungen an meiner Seite nehemn.</p>
 </body>
 </html>
