--- a/Meine-Website.html
+++ b/Meine-Website.html
@@ -27,5 +27,7 @@
         <h2><u>Rückblick:</u></h2>
         <p>In den ersten zwei Tagen lernte ich ,über die Seite Codecademy, wie ich HTML,CSS und GitHub bedienen kann.</p>
         <h2><u>Ausblick:</u></h2><p>Ich werde mit GitHub pages meinen Blog gestalten und weitere Änderungen an meiner Seite nehemn.</p>
+
+        <h1 class="color capitalize h1">Einen schönen Tag noch!</h1>
 </body>
 </html>
